--- a/tracker/templates/projects.html
+++ b/tracker/templates/projects.html
@@ -38,15 +38,15 @@
        <div>
             <nav arial-label="Chapter Links">
                 <ul class="pagination justify-content-end">
-                    <li  class="page-item {% if page == 1 %} disabled {% endif %}"><a class="page-link" href="{{ url_for('projects.get_projects', page=(page-1)) }}" aria-label="Previous">
+                    <li  class="page-item {% if page == 1 %} disabled {% endif %}"><a class="page-link" href="{{ url_for('projects.forward',client_name=client_name, page=(page-1)) }}" aria-label="Previous">
                         <span aria-hidden="true">&laquo;</span>
                         <span class="sr-only">Previous</span>
                     </a></li>
 
                     {% for i in limits %}
-                    <li class="page-item {% if page == i %} active {% endif %}"><a class="page-link" href="{{ url_for('projects.get_projects', page=i) }}">{{ i }}</a></li>
+                    <li class="page-item {% if page == i %} active {% endif %}"><a class="page-link" href="{{ url_for('projects.forward',client_name=client_name, page=i) }}">{{ i }}</a></li>
                     {% endfor %}
-                    <li class="page-item {% if (page) == end %} disabled {% endif %}"><a class="page-link" href="{{ url_for('projects.get_projects', page=(page+1)) }}" aria-label="Next">
+                    <li class="page-item {% if (page) == end %} disabled {% endif %}"><a class="page-link" href="{{ url_for('projects.forward',client_name=client_name, page=(page+1)) }}" aria-label="Next">
                         <span aria-hidden="true">&raquo;</span>
                         <span class="sr-only">Next</span>
                     </a></li>
