--- a/tracker/templates/project.html
+++ b/tracker/templates/project.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 <div class="container">
-    <div class="card">
+    <div class="card mt-4">
         <div class="card-body">
             <h4 class="card-title">Project Details</h4>
             <h6 class="card-subtitle">Assigned To: {{ proj['assignee'] }}</h6>
