--- a/tracker/templates/update_project.html
+++ b/tracker/templates/update_project.html
@@ -4,7 +4,7 @@
 <div class="container">
     <div class="row">
         <div class="col-2"></div>
-        <div class="col-6">
+        <div class="col-6 mt-3">
 
             <h4>client: {{client}}</h4>
 
@@ -35,7 +35,7 @@
 
         </div>
 
-        <div class="col-4">
+        <div class="col-4 mt-3">
             <a href="{{ url_for('projects.project', case=project_number) }}">
                 <span>&laquo;</span>
                 <span>Back</span>
