--- a/tracker/templates/projects.html
+++ b/tracker/templates/projects.html
@@ -29,7 +29,7 @@
     <tr>
         <td>{{ project['client'] }}</td>
         <td><a href="{{ url_for('projects.project', case=project['project']) }}"> {{ project['project'] }}</a></td>
-        <td> {{ project['created_at'].strftime('%m/%d/%Y') }}</td>
+        <td> {{ project['created at'].strftime('%m/%d/%Y') }}</td>
         <td><a href="{{ url_for('projects.del_project', case=project['project']) }}"> delete</a>   <!--  del_project/case -->
         </td>
     </tr>
